<resources>
    <string name="app_name">Simple Quest</string>

    <!-- initialization -->
    <string name="init_location_permission_rationale_title">Location Permission</string>
    <string name="init_location_permission_rationale_message">The app wants to determine the user\'s location. This allows a user to find the nearest location.</string>
    <string name="init_location_services_disabled_title">Location Services disabled</string>
    <string name="init_location_services_disabled_message">App needs to access your location to find the nearest theater. Please turn on Location Services in your device settings.</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="no_thanks">No thanks</string>

    <!-- permissions -->
    <string name="location_permission_title">Location Permission Required</string>

    <!-- Navigation -->
    <string name="navigation_home">Home</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_track_list">Tracks</string>
    <string name="navigation_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- Service -->
    <string name="service_notification_channel_name">Track recording</string>
    <string name="service_track_was_not_saved">Track was not saved</string>

    <!-- Home -->
    <string name="home_start_tracking">Start</string>
    <string name="home_stop_tracking">Stop</string>
    <string name="home_starting_tracking">Starting…</string>
    <string name="info">info</string>
    <string name="home_last_track_name">Last track</string>
    <string name="home_last_track_distance">Distance</string>
    <string name="home_no_tracks">(no tracks)</string>
    <string name="home_is_recording">Is Recording…</string>
    <string name="home_is_recording_paused">Paused Recording…</string>
    <string name="home_last_track_duration">Duration</string>
    <string name="home_location_is_available">Location is available</string>
    <string name="home_location_is_not_available">Location is not available</string>
    <string name="home_location_suspended_status">Location suspended status: %d</string>
    <string name="home_pause_tracking">Pause</string>
    <string name="home_resume_tracking">Resume</string>
    <string name="home_average_speed">Average speed</string>
    <string name="home_current_speed">Current speed</string>
    <string name="home_location_permission_message">Please grant the Permission Location on your device to record tracking</string>

    <!-- Map -->
    <string name="map_iam_here">I\'am here</string>
    <string name="map_start">start</string>
    <string name="map_finish">finish</string>
    <string name="map_refresh">Refresh</string>
    <string name="map_recording_track">Recording track: %s</string>
    <string name="map_location_permission_message">Please grant the Permission Location on your device to view your location</string>
    <string name="map_plus" translatable="false">+</string>
    <string name="map_minus" translatable="false">-</string>

    <!-- Tracks -->
    <string name="tracks_start">Start</string>
    <string name="tracks_finish">Finish</string>
    <string name="tracks_no_tracks">No tracks</string>
    <string name="tracks_title">%d tracks</string>
    <string name="tracks_i">i</string>
    <string name="tracks_details">Details</string>
    <string name="tracks_track_cant_be_viewed">This track can\'t be viewed</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_gps_accuracy_title">GPS accuracy</string>
    <string name="settings_gps_accuracy_value">Time period: %d s</string>
    <string name="settings_gps_accuracy_description">Please select the time period (in seconds) how often the location should be updated</string>
    <string name="settings_gps_accuracy_hint">More higher value reduces battery consumption but reduces the track accuracy</string>

    <string name="settings_track_record_sensitivity_title">Track record sensitivity</string>
    <string name="settings_track_record_sensitivity_value">Save track if it has at least %d m</string>
    <string name="settings_track_record_sensitivity_description">Please select the minimal distance to keep the recorded track</string>
    <string name="settings_track_record_sensitivity_hint">Track will not be recorded if the final track distance is less the this value</string>

    <string name="settings_minimal_displacement_title">Minimal displacement</string>
    <string name="settings_minimal_displacement_value">Minimal displacement is %d m</string>
    <string name="settings_minimal_displacement_description">Please select the smallest displacement in meters</string>
    <string name="settings_minimal_displacement_hint">Location will not be updated until the distance from the last update is equals or higher this value</string>

    <string name="settings_minimal_battery_level_title">Minimal battery level</string>
    <string name="settings_minimal_battery_level_value">Minimal battery level for track recording is %d %%</string>
    <string name="settings_minimal_battery_level_description">Please select the minimal battery level</string>
    <string name="settings_minimal_battery_level_hint">When the battery level reaches this value the tracks recordings stops</string>

    <string name="settings_about_title">About</string>
    <string name="settings_about_value">Application description</string>
    <string name="settings_about_description">Application version %s %s</string>

    <string name="settings_apply">Apply</string>

    <!-- Track details -->
    <string name="track_details_name">Track name</string>
    <string name="track_details_statistics">Statistics</string>
    <string name="track_details_share">Share</string>
    <string name="track_details_delete">Delete track</string>
    <string name="track_details_distance">distance %s</string>
    <string name="track_details_average_speed">average speed %s</string>
    <string name="track_details_duration">duration %s</string>
    <string name="track_details_pauses">pauses %s</string>
    <string name="track_details_map">Map</string>

    <string name="track_details_delete_title">Delete track</string>
    <string name="track_details_delete_description">Do you really want to delete this track?</string>
    <string name="track_details_share_file">Share file</string>
    <string name="track_details_share_file_subject">Track from Simple Quest app</string>
    <string name="track_details_share_file_text">Hi! In the attachment to this e-mail there is a track %s assembled by Simple Quest app</string>

    <!-- Others -->
    <string name="others_km">km</string>
    <string name="others_kmh">km/h</string>
    <string name="others_m">m</string>

</resources>
